# modorganizer-archive

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml
cmake/: config.cmake.in
include/archive/: archive.h
src/: CMakeLists.txt  archive.cpp  archive.h  extractcallback.cpp  extractcallback.h  fileio.h  inputstream.cpp  inputstream.h  interfaceguids.cpp  library.h  multioutputstream.cpp  multioutputstream.h  opencallback.cpp  opencallback.h  propertyvariant.cpp  propertyvariant.h  unknown_impl.h  version.rc
src/linux/: compatibility.h  fileio.cpp  fileio.h
src/win32/: fileio_win32.cpp
tests/: CMakeLists.txt  test.cpp
tests/files/: test.7z  test.rar  test.tar.bz2  test.tar.zst  test_encrypted.7z  test_encrypted_headers.7z
